Fix styles for links (wcag contrast) and slide linking.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -60,11 +60,15 @@ strong {
 }
 
 a {
-	color: $cyan;
+	color: $sea;
 	text-decoration: none;
 
 	&:hover {
-		text-decoration: underline;
+		border-bottom: 1px dotted $sea;
+
+		img {
+			border-bottom: none;
+		}
 	}
 }
 
