--- a/css/src/_button.scss
+++ b/css/src/_button.scss
@@ -28,6 +28,7 @@
 	&:hover {
 		text-decoration: none;
 		opacity: .8;
+		border-bottom: none;
 	}
 
 	&:before {
