--- a/css/src/_component-slides.scss
+++ b/css/src/_component-slides.scss
@@ -42,6 +42,10 @@
             opacity: 1;
         }
 
+        &.has-link {
+            cursor: pointer;
+        }
+
         img {
             position: relative;
             visibility: hidden;
